Тестовое задание - выполнить ревью: исправлена ссылка на API - вместо готовой библиотеки привязан проект для динамического применения изменений; пересмотрена структура - переименованы некоторые файлы для лучшего понимания их назначения; добавлена асинхронность, при этом сохранены синхронные методы для обратной совместимости; инициализация HttpClient теперь происходит один раз; добавлены комментарии к классам и методам. На основе API-спецификации был разработан бэкенд для прогона тестов - все тесты успешны.

--- a/src/TR.Connector/TR.Connector.csproj
+++ b/src/TR.Connector/TR.Connector.csproj
@@ -6,10 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <!-- прежде всего ссылаемся на API в соседнем проекте для динамического подтягивания изменений в нём -->
+  <ItemGroup>
+    <ProjectReference Include="..\TR.Connectors.Api\TR.Connectors.Api.csproj" />
+  </ItemGroup>
+<!-- 
   <ItemGroup>
     <Reference Include="TR.Connectors.Api">
       <HintPath>libs\TR.Connectors.Api.dll</HintPath>
     </Reference>
   </ItemGroup>
+  -->
 
 </Project>
